diff deploy doc

--- a/config/database.yml
+++ b/config/database.yml
@@ -42,5 +42,9 @@ test:
   production:
   <<: *default
   database: kichpan_production
+  username: deploy
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
 #  username: testapp
 #  password: <%= ENV['TESTAPP_DATABASE_PASSWORD'] %>
